--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -52,7 +52,7 @@
     --markprompt-ring: #b4b6f8;
     --markprompt-error-background: #450a0a;
     --markprompt-error-foreground: #fecaca;
-    --markprompt-warning-background: #fefce8;
+    --markprompt-warning-background: #171717;
   }
 }
 
@@ -629,7 +629,7 @@
 .MarkpromptPromptSubmitButton {
   padding: 0.375rem 0.75rem;
   outline: none;
-  color: var(--markprompt-background);
+  color: var(--markprompt-foreground);
   background-color: var(--markprompt-primary);
   border-radius: calc(var(--markprompt-radius) * 0.5);
   font-size: var(--markprompt-text-size);
@@ -717,6 +717,10 @@
   font-size: var(--markprompt-text-size);
   background-color: var(--markprompt-warning-background);
   border-radius: var(--markprompt-radius);
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  gap: 1rem;
 }
 
 .MarkpromptAnswerContainer {
