--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -421,7 +421,7 @@
 }
 
 .MarkpromptForm[data-state='disabled'] {
-  opacity: 70%;
+  opacity: 0.7;
   cursor: not-allowed;
 }
 
@@ -614,10 +614,6 @@
 
 .MarkpromptPrompt::placeholder {
   color: var(--markprompt-mutedForeground);
-}
-
-.MarkpromptPrompt::placeholder {
-  opacity: 50%;
 }
 
 .MarkpromptPrompt:focus {
