--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -5,6 +5,7 @@
   --markprompt-mutedForeground: #888;
   --markprompt-border: #ececec;
   --markprompt-border-accent: #cdcdcd;
+  --markprompt-highlight: #ededed;
   --markprompt-input: #fff;
   --markprompt-primary: #6366f1;
   --markprompt-primaryForeground: #fff;
@@ -17,8 +18,8 @@
   --markprompt-ring: #b4b6f8;
   --markprompt-radius: 0.75rem;
   --markprompt-button-radius: 0.375rem;
-  --markprompt-text-size: 0.875rem;
-  --markprompt-text-size-xs: 0.75rem;
+  --markprompt-text-size: 13px;
+  --markprompt-text-size-xs: 11px;
   --markprompt-text-size-code: 88%;
   --markprompt-button-icon-size: 1rem;
   --markprompt-icon-stroke-width: 2px;
@@ -27,7 +28,7 @@
   --markprompt-ring-shadow: 0 0 #0000;
   --markprompt-ring-offset-shadow: 0 0 #0000;
   --markprompt-error-background: #fef2f2;
-  --markprompt-error-foreground: #991b1b;
+  --markprompt-background-purple: #6C47FF;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -39,6 +40,7 @@
     --markprompt-mutedForeground: #808080;
     --markprompt-border: #262626;
     --markprompt-border-accent: #444;
+    --markprompt-highlight: #080808;
     --markprompt-input: #fff;
     --markprompt-primary: #6366f1;
     --markprompt-primaryForeground: #fff;
@@ -51,6 +53,7 @@
     --markprompt-ring: #b4b6f8;
     --markprompt-error-background: #450a0a;
     --markprompt-error-foreground: #fecaca;
+    --markprompt-background-purple: #6C47FF;
   }
 }
 
@@ -133,6 +136,51 @@
 }
 
 .MarkpromptFloatingTrigger:after {
+  content: "";
+  mix-blend-mode: overlay;
+  background-image: linear-gradient(rgba(255, 255, 255, 0.1) 45%, rgba(255, 255, 255, 0) 55%);
+}
+
+.MarkpromptFloatingTrigger:after, .MarkpromptFloatingTrigger:before {
+  box-sizing: border-box;
+  border: 0 solid var(--markprompt-border-accent);
+}
+
+.MarkpromptHighlightButton {
+  box-shadow: rgba(255, 255, 255, 0.1) 0px 1px 0px 0px inset, var(--markprompt-button-background) 0px 0px 0px 1px;
+  box-sizing: border-box;
+  display: grid
+  overflow: hidden;
+  place-content: center;
+  outline-style: none;
+  background-color: rgb(33, 33, 38);
+  cursor: pointer;
+  padding: 0.675rem;
+  display: flex;
+  transition-timing-function: cubic-bezier(.4,.36,0,1);
+  transition-property: all;
+  transition-duration: 300ms;
+}
+
+.MarkpromptHighlightButton:before {
+  content: "";
+  background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0));
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition-timing-function: cubic-bezier(.4,.36,0,1);
+  transition-property: opacity;
+  transition-duration: 300ms;
+  opacity: 0.7;
+}
+
+.MarkpromptHighlightButton:hover:before {
+  opacity: 1;
+}
+
+.MarkpromptHighlightButton:after {
   content: "";
   mix-blend-mode: overlay;
   background-image: linear-gradient(rgba(255, 255, 255, 0.1) 45%, rgba(255, 255, 255, 0) 55%);
@@ -2193,6 +2241,138 @@
   border-color: var(--markprompt-border-accent);
 }
 
+.MarkpromptDropdownMenuContent {
+  width: 240px;
+  background-color: white;
+  border: 1px solid var(--markprompt-border);
+  border-radius: 0.5rem;
+  padding: 1rem 1rem 0.5rem 1rem;
+  box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
+  animation-duration: 400ms;
+  animation-timing-function: cubic-bezier(0.16, 1, 0.3, 1);
+  will-change: transform, opacity;
+}
+
+.MarkpromptDropdownMenuContent[data-state='open'] {
+  animation-name: dropdownMenuSlideGrow;
+}
+
+.MarkpromptDropdownMenuContent[data-state='closed'] {
+  animation-name: dropdownMenuSlideGrowReverse;
+}
+
+.MarkpromptDropdownMenuTitle {
+  color: var(--markprompt-foreground);
+  font-weight: 600;
+  font-size: var(--markprompt-text-size);
+  margin-bottom: 0.25rem;
+}
+
+.MarkpromptDropdownMenuSubtitle {
+  color: var(--markprompt-mutedForeground);
+  font-size: var(--markprompt-text-size);
+}
+
+.MarkpromptDropdownMenuLabel {
+  font-size: var(--markprompt-text-size);
+  line-height: 25px;
+  color: var(--markprompt-mutedForeground);
+}
+
+.MarkpromptDropdownMenuSeparatorSpace {
+  height: 1rem;
+}
+
+
+.MarkpromptDropdownMenuSeparatorLine {
+  height: 1px;
+  background-color: var(--markprompt-border);
+  margin: 0.5rem -1rem;
+}
+
+.MarkpromptDropdownMenuSections {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.MarkpromptDropdownMenuItem {
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  font-size: var(--markprompt-text-size);
+  border-radius: var(--markprompt-button-radius);
+  position: relative;
+  user-select: none;
+  outline: none;
+  margin-left: -0.5rem;
+  margin-right: -0.5rem;
+  padding: 0 0.5rem;
+  font-weight: 500;
+  transition-timing-function: cubic-bezier(.4,.36,0,1);
+  transition-property: all;
+  transition-duration: 150ms;
+  cursor: pointer;
+}
+
+.MarkpromptDropdownMenuItem[data-type='link'] {
+  color: var(--markprompt-foreground);
+  height: 28px;
+}
+
+.MarkpromptDropdownMenuItem[data-theme='purple'] {
+  --markprompt-button-background: var(--markprompt-background-purple);
+}
+
+.MarkpromptDropdownMenuItem[data-type='button'] {
+  color: var(--markprompt-background);
+  background-color: var(--markprompt-button-background);
+  height: 30px;
+  justify-content: center;
+}
+
+.MarkpromptDropdownMenuItem[data-highlighted][data-type='link'] {
+  background-color: var(--markprompt-highlight);
+}
+
+.MarkpromptDropdownMenuItem[data-highlighted][data-type='button']:before {
+  opacity: 1;
+}
+
+.MarkpromptDropdownMenuIcon {
+  width: 1rem;
+  height: 1rem;
+  stroke-width: 2px;
+}
+
+/*
+.DropdownMenuSubTrigger[data-state='open'] {
+  background-color: var(--violet-4);
+  color: var(--violet-11);
+}
+.DropdownMenuItem[data-disabled],
+.DropdownMenuCheckboxItem[data-disabled],
+.DropdownMenuRadioItem[data-disabled],
+.DropdownMenuSubTrigger[data-disabled] {
+  color: var(--mauve-8);
+  pointer-events: none;
+}
+
+
+.DropdownMenuItemIndicator {
+  position: absolute;
+  left: 0;
+  width: 25px;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.DropdownMenuArrow {
+  fill: white;
+} */
+
 @keyframes markprompt-show-content {
   0% {
     opacity: 0;
@@ -2287,5 +2467,27 @@
   to {
     opacity: 1;
     transform: translateX(0);
+  }
+}
+
+@keyframes dropdownMenuSlideGrow {
+  from {
+    opacity: 0;
+    transform: translateX(6px) translateY(12px) scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0) translateY(0) scale(1);
+  }
+}
+
+@keyframes dropdownMenuSlideGrowReverse {
+  from {
+    opacity: 1;
+    transform: translateX(0) translateY(0) scale(1);
+  }
+  to {
+    opacity: 0;
+    transform: translateX(6px) translateY(12px) scale(0.95);
   }
 }
