--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -256,27 +256,48 @@
 
 .MarkpromptContentDialog {
   background-color: var(--markprompt-background);
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100dvw;
-  height: 100dvh;
-  animation-name: markprompt-show-content;
-  animation-duration: 200ms;
-  animation-fill-mode: both;
-  transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
   color: var(--markprompt-foreground);
   overflow: hidden;
   display: grid;
   grid-template-rows: 1fr auto;
 }
 
-.MarkpromptContentDialog[data-state='closed'] {
-  animation-name: markprompt-hide-content;
-  animation-duration: 100ms;
+.MarkpromptContentDialog[data-variant="dialog"] {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 100dvw;
+  height: 80vh;
+  max-height: 600px;
+  animation-name: markprompt-show-content;
+  animation-duration: 200ms;
   animation-fill-mode: both;
   transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
+}
+
+.MarkpromptContentDialog[data-variant="dialog"][data-state='closed'] {
+  animation-name: markprompt-hide-content;
+  animation-duration: 100ms;
+}
+
+.MarkpromptContentDialog[data-variant="sheet"] {
+  z-index: 100;
+  position: fixed;
+  top: 1rem;
+  bottom: 1rem;
+  right: 1rem;
+  width: 100%;
+  max-width: 480px;
+  animation-name: markprompt-show-sheet;
+  animation-duration: 300ms;
+  animation-fill-mode: both;
+  transition-timing-function: cubic-bezier(0.64, 0.57, 0.67, 1.53);
+}
+
+.MarkpromptContentDialog[data-variant="sheet"][data-state='closed'] {
+  animation-name: markprompt-hide-sheet;
+  animation-duration: 100ms;
 }
 
 @media screen and (pointer: fine) {
@@ -286,10 +307,12 @@
     box-shadow:
       hsl(206deg 22% 7% / 35%) 0 10px 38px -10px,
       hsl(206deg 22% 7% / 20%) 0 10px 20px -15px;
-    max-width: 44rem;
-    max-height: 40rem;
     outline: 2px solid transparent;
     outline-offset: 2px;
+  }
+  .MarkpromptContentDialog[data-variant="dialog"] {
+    max-width: 44rem;
+    max-height: 40rem;
   }
 }
 
@@ -477,27 +500,41 @@
 }
 
 .MarkpromptClose {
-  color: var(--markprompt-foreground);
-  background-color: var(--markprompt-muted);
-  padding: 0.125rem 0.375rem;
-  border-style: solid;
-  border-width: 1px;
-  border-radius: var(--markprompt-button-radius);
-  border-color: var(--markprompt-border);
   cursor: pointer;
   display: grid;
   font-weight: 600;
   place-items: center;
-  transition-property: box-shadow;
+  border-radius: var(--markprompt-button-radius);
+  transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+  transition-duration: 200ms;
 }
 
-.MarkpromptClose:hover {
+.MarkpromptClose[data-type='icon'] {
+  color: var(--markprompt-mutedForeground);
+  padding: 0.375rem;
+}
+
+.MarkpromptClose[data-type='kbd'] {
+  color: var(--markprompt-foreground);
+  padding: 0.125rem 0.375rem;
+  border-style: solid;
+  border-width: 1px;
+  border-color: var(--markprompt-border);
+  background-color: var(--markprompt-muted);
+}
+
+.MarkpromptClose[data-type='icon']:hover {
+  color: var(--markprompt-foreground);
+  background-color: var(--markprompt-muted);
+}
+
+.MarkpromptClose[data-type='kbd']:hover {
   opacity: 0.8;
+  background-color: var(--markprompt-muted);
 }
 
-.MarkpromptClose:focus {
+.MarkpromptClose[data-type='kbd']:focus {
   box-shadow: inset 0 0 0 2px var(--markprompt-primary);
 }
 
@@ -2377,9 +2414,8 @@
 @keyframes markprompt-show-content {
   0% {
     opacity: 0;
-    transform: translate(-50%, -50%) scale(0.94);
+    transform: translate(-50%, -46%) scale(0.94);
   }
-
   100% {
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
@@ -2391,10 +2427,32 @@
     opacity: 1;
     transform: translate(-50%, -50%) scale(1);
   }
-
   100% {
     opacity: 0;
     transform: translate(-50%, -50%) scale(0.98);
+  }
+}
+
+@keyframes markprompt-show-sheet {
+  0% {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
+
+@keyframes markprompt-hide-sheet {
+  0% {
+    opacity: 1;
+    transform: translateX(0);
+  }
+
+  100% {
+    opacity: 0;
+    transform: translateX(50px);
   }
 }
 
