--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -18,8 +18,9 @@
   --markprompt-ring: #b4b6f8;
   --markprompt-radius: 0.75rem;
   --markprompt-button-radius: 0.375rem;
-  --markprompt-text-size: 13px;
-  --markprompt-text-size-xs: 11px;
+  --markprompt-text-size-lg: 16px;
+  --markprompt-text-size: 14px;
+  --markprompt-text-size-xs: 12px;
   --markprompt-text-size-code: 88%;
   --markprompt-button-icon-size: 1rem;
   --markprompt-icon-stroke-width: 2px;
@@ -542,6 +543,19 @@
   font-weight: 600;
   font-size: 0.675rem;
   font-family: inherit;
+}
+
+.MarkpromptNav {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0.675rem 1rem;
+  border-bottom: 1px solid var(--markprompt-border);
+}
+
+.MarkpromptNavTitle {
+  font-weight: 500;
+  font-size: var(--markprompt-text-size-lg);
 }
 
 .MarkpromptForm {
@@ -2028,8 +2042,11 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  justify-content: flex-end;
   gap: 0.25rem;
   padding: 1rem;
+  flex-grow: 1;
+  width: 100%;
 }
 
 .MarkpromptDefaultViewMessagePromptsContainer h3 {
@@ -2044,9 +2061,9 @@
   font-size: var(--markprompt-text-size);
   display: inline-block;
   text-decoration: none;
-  padding: 0.125rem 0.5rem;
+  padding: 0.125rem 0.75rem;
   border: 1px solid var(--markprompt-border);
-  border-radius: var(--markprompt-button-radius);
+  border-radius: 9999px;
   color: var(--markprompt-primary);
   font-weight: 500;
   transition-property: opacity;
