--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -7,7 +7,7 @@
   --markprompt-border-accent: #cdcdcd;
   --markprompt-highlight: #ededed;
   --markprompt-input: #fff;
-  --markprompt-primary: #6366f1;
+  --markprompt-primary: #7C3AED;
   --markprompt-primaryForeground: #fff;
   --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
