--- a/examples/with-markprompt-web/src/style.css
+++ b/examples/with-markprompt-web/src/style.css
@@ -34,12 +34,12 @@ main {
   min-height: 100dvh;
 }
 
-.centered {
+.message {
   display: grid;
   place-items: center;
 }
 
-.centered p {
+.message p {
   border: 1px solid #ddd;
   background-color: #eee;
   padding: 0.25rem 0.75rem;
