--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -1,5 +1,6 @@
 :root {
   --markprompt-background: #fff;
+  --markprompt-background-accent: #fff;
   --markprompt-foreground: #171717;
   --markprompt-muted: #fafafa;
   --markprompt-mutedForeground: #888;
@@ -7,7 +8,7 @@
   --markprompt-border-accent: #cdcdcd;
   --markprompt-highlight: #ededed;
   --markprompt-input: #fff;
-  --markprompt-primary: #7C3AED;
+  --markprompt-primary: #7c3aed;
   --markprompt-primaryForeground: #fff;
   --markprompt-primaryMuted: #8285f4;
   --markprompt-secondary: #fafafa;
@@ -15,7 +16,7 @@
   --markprompt-primaryHighlight: #ec4899;
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
-  --markprompt-ring: #b4b6f8;
+  --markprompt-ring: #ddd6fe;
   --markprompt-radius: 0.75rem;
   --markprompt-button-radius: 0.375rem;
   --markprompt-text-size-lg: 16px;
@@ -35,7 +36,8 @@
 @media (prefers-color-scheme: dark) {
   /* Support Docusaurus dark theme data attribute */
   :not([data-theme='light']):root {
-    --markprompt-background: #050505;
+    --markprompt-background: #171717;
+    --markprompt-background-accent: #0d0d0d;
     --markprompt-foreground: #d4d4d4;
     --markprompt-muted: #171717;
     --markprompt-mutedForeground: #808080;
@@ -43,7 +45,7 @@
     --markprompt-border-accent: #444;
     --markprompt-highlight: #080808;
     --markprompt-input: #fff;
-    --markprompt-primary: #6366f1;
+    --markprompt-primary: #6d28d9;
     --markprompt-primaryForeground: #fff;
     --markprompt-primaryMuted: #8285f4;
     --markprompt-secondary: #0e0e0e;
@@ -51,7 +53,7 @@
     --markprompt-primaryHighlight: #ec4899;
     --markprompt-secondaryHighlight: #a855f7;
     --markprompt-overlay: #00000040;
-    --markprompt-ring: #b4b6f8;
+    --markprompt-ring: #8b5cf6;
     --markprompt-error-background: #450a0a;
     --markprompt-error-foreground: #fecaca;
     --markprompt-background-purple: #6C47FF;
@@ -551,6 +553,7 @@
   align-items: center;
   padding: 0.675rem 1rem;
   border-bottom: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-background-accent);
 }
 
 .MarkpromptNavTitle {
@@ -583,6 +586,7 @@
   overflow-y: visible;
   border-top: 1px solid var(--markprompt-border);
   box-shadow: 0 -7px 10px -1px rgb(0 0 0 / 3%);
+  /* background-color: var(--markprompt-background-accent); */
 }
 
 .MarkpromptPromptWrapper {
@@ -690,7 +694,7 @@
   color: var(--markprompt-foreground);
   font-weight: 400;
   flex: grow;
-  margin-top: 2px;
+  margin-top: 1px;
 }
 
 .MarkpromptMessageAvatarContainer {
@@ -798,6 +802,33 @@
   border: 1px solid transparent;
   cursor: pointer;
   white-space: nowrap;
+  position: relative;
+  overflow: hidden;
+  flex: none;
+}
+
+.MarkpromptPromptSubmitButton:disabled {
+  cursor: not-allowed;
+  background-color: transparent !important;
+}
+
+.MarkpromptPromptSubmitButton:not(:disabled):before {
+  content: "";
+  background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0));
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition-timing-function: cubic-bezier(.4,.36,0,1);
+  transition-property: opacity;
+  transition-duration: 300ms;
+  opacity: 0.7;
+  overflow: hidden;
+}
+
+.MarkpromptPromptSubmitButton:hover:before {
+  opacity: 1;
 }
 
 .MarkpromptViews button:focus-visible,
@@ -1141,11 +1172,12 @@
   color: inherit;
 }
 
+
 .MarkpromptAnswer pre {
   color: var(--markprompt-foreground);
   background-color: var(--markprompt-muted);
   border: 1px solid var(--markprompt-border);
-  overflow-x: auto;
+  overflow-x: auto !important;
   font-weight: 400;
   font-family: monospace;
   font-size: var(--markprompt-text-size-code);
@@ -1342,12 +1374,12 @@
   transition-property: all;
   transition-duration: 300ms;
   opacity: 0;
-  transform: translateY(8px);
+  transform: translateY(-2px);
 }
 
 .MarkpromptMessage:hover .MarkpromptPromptFeedback {
   opacity: 1;
-  transform: translateY(10px);
+  transform: translateY(0px);
 }
 
 .MarkpromptPromptFeedback[data-variant='text'] {
@@ -2361,6 +2393,36 @@
   stroke-width: 2px;
 }
 
+.MarkpromptLoadingDots {
+  display: inline-flex;
+  align-items: center;
+  margin-left: -1.5px;
+  margin-top: -15px;
+  transform: translateY(-4px);
+}
+
+.MarkpromptLoadingDots span {
+  background-color: var(--markprompt-mutedForeground);
+  animation-name: markprompt-blink;
+  animation-duration: 1.4s;
+  animation-iteration-count: infinite;
+  animation-fill-mode: both;
+  width: 5px;
+  height: 5px;
+  border-radius: 9999px;
+  display: inline-block;
+  margin: 0 1.5px;
+}
+
+.MarkpromptLoadingDots span:nth-of-type(2) {
+  animation-delay: 0.2s;
+}
+
+.MarkpromptLoadingDots span:nth-of-type(3) {
+  animation-delay: 0.4s;
+}
+
+
 /*
 .DropdownMenuSubTrigger[data-state='open'] {
   background-color: var(--violet-4);
@@ -2525,5 +2587,17 @@
   to {
     opacity: 0;
     transform: translateX(6px) translateY(12px) scale(0.95);
+  }
+}
+
+@keyframes markprompt-blink {
+  0% {
+    opacity: 0.2;
+  }
+  20% {
+    opacity: 1;
+  }
+  100% {
+    opacity: 0.2;
   }
 }
