--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -2083,6 +2083,7 @@
   border: 1px solid var(--markprompt-border);
   font-weight: 500;
   padding: 0.5rem 1rem;
+  gap: 0.5rem;
   color: var(--markprompt-foreground);
   border-radius: var(--markprompt-button-radius);
   cursor: pointer;
@@ -2188,28 +2189,6 @@
   margin-block: 0;
   font-size: var(--markprompt-text-size-xs);
   color: var(--markprompt-mutedForeground);
-}
-
-.MarkpromptMessageCreateTicketButton {
-  padding: 0.35rem 0.5rem 0.25rem;
-  border: 1px solid var(--markprompt-border);
-  border-radius: calc(var(--markprompt-radius) * 0.5);
-  background-color: white;
-  cursor: pointer;
-  color: var(--markprompt-foreground);
-}
-
-.MarkpromptMessageCreateTicketButton:hover {
-  background-color: var(--markprompt-muted);
-}
-
-.MarkpromptMessageCreateTicketButton div {
-  display: inline-grid;
-  grid-template-columns: auto 1fr;
-  align-items: center;
-  gap: 0.25rem;
-  font-size: var(--markprompt-text-size);
-  font-weight: 500;
 }
 
 .MarkpromptCreateTicketView {
@@ -2393,7 +2372,7 @@
   opacity: 1;
 }
 
-.MarkpromptDropdownMenuIcon {
+.MarkpromptMenuIcon {
   width: 1rem;
   height: 1rem;
   stroke-width: 2px;
