--- a/examples/with-markprompt-web/src/style.css
+++ b/examples/with-markprompt-web/src/style.css
@@ -41,10 +41,12 @@ main {
 
 #message p {
   border: 1px solid #ddd;
-  background-color: #eee;
+  background-color: #fafafa;
   padding: 0.25rem 0.75rem;
   border-radius: 9999px;
   font-size: 13px;
+  font-weight: 500;
+  color: #222;
 }
 
 /* We make the container fill the entire screen to accommodate for
