--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -17,7 +17,7 @@
   --markprompt-secondaryHighlight: #a855f7;
   --markprompt-overlay: #00000010;
   --markprompt-ring: #ddd6fe;
-  --markprompt-radius: 0.75rem;
+  --markprompt-radius: 0.5rem;
   --markprompt-button-radius: 0.375rem;
   --markprompt-text-size-lg: 16px;
   --markprompt-text-size: 14px;
@@ -272,12 +272,15 @@
   left: 50%;
   transform: translate(-50%, -50%);
   width: 100dvw;
-  height: 80vh;
-  max-height: 600px;
   animation-name: markprompt-show-content;
   animation-duration: 200ms;
   animation-fill-mode: both;
   transition-timing-function: cubic-bezier(0.25, 0.4, 0.55, 1.4);
+}
+
+.MarkpromptContentDialog[data-variant="dialog"]:not([data-size="adaptive"]) {
+  height: 80vh;
+  max-height: 600px;
 }
 
 .MarkpromptContentDialog[data-variant="dialog"][data-state='closed'] {
@@ -550,21 +553,6 @@
   font-family: inherit;
 }
 
-.MarkpromptNav {
-  height: var(--markprompt-navbar-height);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  padding: 0.675rem 1rem;
-  border-bottom: 1px solid var(--markprompt-border);
-  background-color: var(--markprompt-background-accent);
-}
-
-.MarkpromptNavTitle {
-  font-weight: 500;
-  font-size: var(--markprompt-text-size-lg);
-}
-
 .MarkpromptForm {
   display: flex;
   flex: 1 1 auto;
@@ -798,7 +786,7 @@
   outline: none;
   color: var(--markprompt-primaryForeground);
   background-color: var(--markprompt-primary);
-  border-radius: calc(var(--markprompt-radius) * 0.5);
+  border-radius: var(--markprompt-button-radius);
   font-size: var(--markprompt-text-size);
   font-weight: 600;
   display: flex;
@@ -2302,7 +2290,7 @@
   width: 240px;
   background-color: white;
   border: 1px solid var(--markprompt-border);
-  border-radius: 0.5rem;
+  border-radius: var(--markprompt-radius);
   padding: 1rem 1rem 0.5rem 1rem;
   box-shadow: 0px 10px 38px -10px rgba(22, 23, 24, 0.35), 0px 10px 20px -15px rgba(22, 23, 24, 0.2);
   animation-duration: 400ms;
@@ -2433,33 +2421,29 @@
   animation-delay: 0.4s;
 }
 
+/* MarkpromptNavigationMenu */
 
-/*
-.DropdownMenuSubTrigger[data-state='open'] {
-  background-color: var(--violet-4);
-  color: var(--violet-11);
-}
-.DropdownMenuItem[data-disabled],
-.DropdownMenuCheckboxItem[data-disabled],
-.DropdownMenuRadioItem[data-disabled],
-.DropdownMenuSubTrigger[data-disabled] {
-  color: var(--mauve-8);
-  pointer-events: none;
-}
-
-
-.DropdownMenuItemIndicator {
-  position: absolute;
-  left: 0;
-  width: 25px;
-  display: inline-flex;
+.MarkpromptNavigationMenu {
+  height: var(--markprompt-navbar-height);
+  display: flex;
+  flex-direction: row;
   align-items: center;
-  justify-content: center;
+  padding: 0.675rem 1rem;
+  border-bottom: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-background-accent);
 }
 
-.DropdownMenuArrow {
-  fill: white;
-} */
+.MarkpromptNavigationMenuTitle {
+  font-weight: 500;
+  font-size: var(--markprompt-text-size-lg);
+  flex-grow: 1;
+}
+
+.MarkpromptTicketDeflectionForm {
+  min-height: 400px;
+}
+
+/* Animations */
 
 @keyframes markprompt-show-content {
   0% {
