--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -620,8 +620,12 @@
   padding-inline: 1.5rem;
   padding-block: 1rem;
   gap: 1rem;
-  align-items: start;
+  align-items: start;.
   overflow: hidden;
+}
+
+.MarkpromptMessageAnswerContainer[data-compact="true"] .MarkpromptAnswer > p {
+  margin-bottom: 1rem;
 }
 
 .MarkpromptMessageAnswer {
@@ -938,10 +942,6 @@
   padding-top: 1rem;
   padding-bottom: 1rem;
 }
-
-/* .MarkpromptAutoScroller::-webkit-scrollbar {
-  display: none;
-} */
 
 .MarkpromptAnswer {
   color: var(--markprompt-foreground);
@@ -2023,11 +2023,25 @@
   gap: 0.25rem;
 }
 
+.MarkpromptDefaultViewContainer {
+  display: flex;
+  flex-direction: column;
+  overflow: hidden auto;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  height: 100%;
+}
+
+.MarkpromptDefaultViewBranding {
+  flex-grow: 0;
+}
+
 .MarkpromptDefaultView {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   overflow-y: auto;
+  flex-grow: 1;
 }
 
 .MarkpromptDefaultViewMessage {
