--- a/examples/with-markprompt-web/src/style.css
+++ b/examples/with-markprompt-web/src/style.css
@@ -53,6 +53,7 @@ main {
    the `display: "plain"` case.
 */
 #markprompt {
-  position: absolute;
+  /* position: absolute;
   inset: 0;
+  pointer-events: auto; */
 }
