--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -844,7 +844,7 @@
   font-size: 1rem;
   color: var(--markprompt-foreground);
   background-color: transparent;
-  padding: 0.5rem 0.75rem;
+  padding: 0.5rem;
 
 }
 
@@ -864,51 +864,6 @@
 
 .MarkpromptPrompt:focus {
   outline: none;
-}
-
-.MarkpromptPromptSubmitButton {
-  padding: 0.375rem 0.75rem;
-  outline: none;
-  color: var(--markprompt-primaryForeground);
-  background-color: var(--markprompt-primary);
-  border-radius: var(--markprompt-button-radius);
-  font-size: var(--markprompt-text-size);
-  font-weight: 600;
-  display: flex;
-  flex-direction: row;
-  gap: 0.5rem;
-  align-items: center;
-  align-self: flex-end;
-  border: 1px solid transparent;
-  cursor: pointer;
-  white-space: nowrap;
-  position: relative;
-  overflow: hidden;
-  flex: none;
-}
-
-.MarkpromptPromptSubmitButton:disabled {
-  cursor: not-allowed;
-  background-color: transparent !important;
-}
-
-.MarkpromptPromptSubmitButton:not(:disabled):before {
-  content: "";
-  background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0));
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  transition-timing-function: cubic-bezier(.4,.36,0,1);
-  transition-property: opacity;
-  transition-duration: 300ms;
-  opacity: 0.7;
-  overflow: hidden;
-}
-
-.MarkpromptPromptSubmitButton:hover:before {
-  opacity: 1;
 }
 
 .MarkpromptViews button:focus-visible,
@@ -2192,6 +2147,8 @@
   opacity: 0.8;
 }
 
+
+/*
 .MarkpromptButton {
   display: flex;
   flex-wrap: nowrap;
@@ -2220,7 +2177,7 @@
 .MarkpromptButton:focus-visible {
   border-color: var(--markprompt-foreground);
   outline: none;
-}
+} */
 
 .MarkpromptToolCallConfirmation {
   margin-top: 0.5rem;
@@ -2581,6 +2538,88 @@
   overflow: hidden;
 }
 
+/* MarkpromptDialogFooter */
+
+.MarkpromptDialogFooter {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 0.675rem 1rem;
+  border-top: 1px solid var(--markprompt-border);
+  background-color: var(--markprompt-background-accent);
+  overflow: hidden;
+  width: 100%;
+  font-size: var(--markprompt-text-size-xs);
+  color: var(--markprompt-mutedForeground);
+}
+
+.MarkpromptDialogFooter :first-child {
+  flex-grow: 1;
+}
+
+.MarkpromptDialogFooter :last-child {
+  flex: none;
+}
+
+/* Buttons */
+
+.MarkpromptButton {
+  padding: 0.375rem 0.75rem;
+  outline: none;
+  border-radius: var(--markprompt-button-radius);
+  font-size: var(--markprompt-text-size);
+  font-weight: 600;
+  display: flex;
+  flex-direction: row;
+  gap: 0.5rem;
+  align-items: center;
+  cursor: pointer;
+  white-space: nowrap;
+  position: relative;
+  overflow: hidden;
+  flex: none;
+}
+
+.MarkpromptButton:disabled {
+  cursor: not-allowed;
+  background-color: transparent !important;
+}
+
+.MarkpromptButton:not(:disabled):before {
+  content: "";
+  background-image: linear-gradient(rgba(255, 255, 255, 0.25), rgba(255, 255, 255, 0));
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transition-timing-function: cubic-bezier(.4,.36,0,1);
+  transition-property: opacity;
+  transition-duration: 300ms;
+  opacity: 0.7;
+  overflow: hidden;
+}
+
+.MarkpromptButton:hover:before {
+  opacity: 1;
+}
+
+.MarkpromptButton[data-variant="primary"] {
+  border: 1px solid transparent;
+  color: var(--markprompt-primaryForeground);
+  background-color: var(--markprompt-primary);
+}
+
+.MarkpromptButton[data-variant="outline"] {
+  border: 1px solid var(--markprompt-border);
+  color: var(--markprompt-foreground);
+  background-color: var(--markprompt-muted);
+}
+
+.MarkpromptPromptWrapper button {
+  align-self: flex-end;
+}
+
 /* Animations */
 
 @keyframes markprompt-show-content {
@@ -2759,11 +2798,14 @@
 @keyframes markprompt-blink {
   0% {
     opacity: 0.2;
+    transform: translateY(-2px);
   }
   20% {
     opacity: 1;
+    transform: translateY(0);
   }
   100% {
     opacity: 0.2;
+    transform: translateY(-2px);
   }
 }
