--- a/packages/css/markprompt.css
+++ b/packages/css/markprompt.css
@@ -182,6 +182,7 @@
   transition-property: opacity;
   transition-duration: 300ms;
   opacity: 0.7;
+  border-radius: var(--markprompt-button-radius);
 }
 
 .MarkpromptHighlightButton:hover:before {
@@ -2465,7 +2466,7 @@
 .MarkpromptLoadingDots span {
   background-color: var(--markprompt-mutedForeground);
   animation-name: markprompt-blink;
-  animation-duration: 1.4s;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
   animation-fill-mode: both;
   width: 5px;
@@ -2598,6 +2599,7 @@
   transition-duration: 300ms;
   opacity: 0.7;
   overflow: hidden;
+  border-radius: var(--markprompt-button-radius);
 }
 
 .MarkpromptButton:hover:before {
@@ -2798,14 +2800,14 @@
 @keyframes markprompt-blink {
   0% {
     opacity: 0.2;
-    transform: translateY(-2px);
+    transform: translateY(1px);
   }
   20% {
     opacity: 1;
-    transform: translateY(0);
+    transform: translateY(-1px);
   }
   100% {
     opacity: 0.2;
-    transform: translateY(-2px);
+    transform: translateY(1px);
   }
 }
